Footer bug fixed in Safari, Date Time alignment fixed in Firefox, Table row calculation fixed, Calendar styled

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,7 +8,10 @@
     border-top-style: solid;
     max-width: 100vw;
     height: 48px;
-    position: sticky;
     z-index: 1;
     bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    width: 100%;
 }
